--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "prepare": "husky && husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@hookform/resolvers": "^3.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^5.4.2",
@@ -32,10 +35,14 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.13",
     "terser": "^5.31.6",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.2.0",
+    "yup": "^1.4.0"
   }
 }
