--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier . --write",
+    "test:jest": "jest",
     "preview": "vite preview",
     "postinstall": "husky install",
     "prepare": "husky && husky install"
@@ -22,7 +23,11 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@hookform/resolvers": "^3.9.0",
-    "@types/react": "^18.3.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react": "^4.3.1",
@@ -33,12 +38,16 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.13",
     "terser": "^5.31.6",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
