--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "firebase": "^10.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -46,15 +50,11 @@
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.13",
     "terser": "^5.31.6",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vite-plugin-svgr": "^4.2.0",
-    "yup": "^1.4.0"
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
