--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "browserslist": "^4.24.0",
     "cypress": "^13.15.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -55,6 +56,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-circular-dependency": "^0.5.0",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
